syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}

  rpc SayHelloStream (HelloRequest) returns (stream HelloResponse) {}

  rpc SayHelloToMany (stream HelloRequest) returns (HelloResponse) {}

  rpc Chat (stream ChatMessage) returns (stream ChatMessage) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
  string timestamp = 2;
}

message ChatMessage {
  string user = 1;
  string text = 2;
  string timestamp = 3;
}